--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excursion Project</title>
-    <link rel="stylesheet" href="/GitHub/Projects/Excursion_Project/style.css">
+    <link rel="stylesheet" type="text/css" href="GitHub/Excursion-Project/style.css">
 </head>
 <body>
     <div id="top">
