--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Excursion Project</title>
+    <link rel="stylesheet" type="text/css" href="GitHub/Excursion-Project/reset.css">
     <link rel="stylesheet" type="text/css" href="GitHub/Excursion-Project/style.css">
 </head>
 <body>
